--- a/minis/index.html
+++ b/minis/index.html
@@ -36,7 +36,7 @@
 
         <div class="content-section">
             <div id="postsContainer">
-
+                <!-- Posts will be dynamically loaded here -->
             </div>
             <div class="loading-container" id="loadingContainer">
                 <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>
@@ -56,7 +56,6 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js"></script>
     <script src="index.js"></script>
 </body>
 
