--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -80,7 +80,7 @@ Supports Markdown:
         </main>
     </div>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js"></script>
     <script src="minis.js"></script>
 </body>
 
