--- a/minis/index.html
+++ b/minis/index.html
@@ -18,11 +18,8 @@
 <body>
     <div class="header-container">
         <h1 class="page-title">
-            <span class="minis">Minis</span> by <span class="brand">Beyond Me Btw</span>
+            <span class="minis">Minis</span> by <span class="brand"><a href="https://beyondmebtw.com">Beyond Me Btw</a></span>
         </h1>
-        <a href="https://beyondmebtw.com" class="home-button">
-            <i class="fas fa-home"></i> Home
-        </a>
     </div>
 
     <div class="main-container">
