--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <header>   
-        <div id="name">Beyond Me Btw</div>
+        <div id="name"><a href="https://beyondmebtw.com" style="color: rgb(59, 52, 45); text-decoration: none;">Beyond Me Btw</a></div>
         <div id="links">
             <div id="home" class="link">Home</div>
             <div id="blog" class="link">Blog</div>
