--- a/minis/index.html
+++ b/minis/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="header-container">
         <h1 class="page-title">
-            <span class="minis">Minis</span> by <span class="brand"><a href="https://beyondmebtw.com">Beyond Me Btw</a></span>
+            <span class="minis">Minis</span> <span class="by">by</span> <span class="brand"><a href="https://beyondmebtw.com">Beyond Me Btw</a></span>
         </h1>
     </div>
 
