--- a/minis/index.html
+++ b/minis/index.html
@@ -9,7 +9,7 @@
     <title>Minis | BeyondMeBtw</title>
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/minis.ico">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@400&family=Permanent+Marker&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Mogra&family=Kavoon&family=Kreon:wght@400&family=Permanent+Marker&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="index.css">
@@ -18,14 +18,14 @@
 <body>
     <div class="header-container">
         <h1 class="page-title">
-            <span class="minis">Minis</span> <span class="by">by</span> <span class="brand"><a href="https://beyondmebtw.com">Beyond Me Btw</a></span>
+            <span class="minis">MINIS</span> <span class="by">by</span> <span class="brand"><a href="https://beyondmebtw.com">Beyond Me Btw</a></span>
         </h1>
     </div>
 
     <div class="main-container">
         <div class="intro-section">
             <h2>What is Minis?</h2>
-            <p><strong>Minis</strong> is my space for short posts like quick thoughts, updates, and ideas that don't
+            <p><strong>MINIS</strong> is my space for short posts like quick thoughts, updates, and ideas that don't
                 need a
                 full blog.
                 It's a casual way to share more often, without writing long essays.</p>
