--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <h2 class="section-title">Featured Posts</h2>
             <div class="featured-posts-container" id="featured-posts-container">
             </div>
-            <a href="https://beyondmetw.com/blog" class="view-all-btn">View All Posts</a>
+            <a href="https://blog.beyondmebtw.com" class="view-all-btn">View All Posts</a>
         </div>
 
         <!-- Projects Grid -->
