--- a/projects/f1hapticandroid/index.html
+++ b/projects/f1hapticandroid/index.html
@@ -470,6 +470,45 @@
       }
     }
   </style>
+  <meta name="description"
+    content="Experience the F1 haptic trailer on Android with synchronized vibrations. Recreation of Apple's Formula 1 haptic feedback experience for mobile devices with immersive audio-visual effects.">
+  <meta name="keywords"
+    content="F1 haptic trailer, Formula 1 Android, haptic feedback mobile, F1 vibration experience, racing game haptics, F1 trailer recreation, Android vibration API">
+  <meta name="author" content="Pranav Veeraghanta - BeyondMeBtw">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://beyondmebtw.com/projects/f1hapticandroid/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://beyondmebtw.com/f1-haptic-trailer">
+  <meta property="og:title" content="F1 Haptic Trailer - Android Recreation | BeyondMeBtw">
+  <meta property="og:description"
+    content="Experience Formula 1 like never before with synchronized haptic feedback on Android devices. Interactive racing experience with vibrations.">
+  <meta property="og:image" content="https://content.beyondmebtw.com/experience/exp29.webp">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://yourdomain.com/f1-haptic-trailer">
+  <meta property="twitter:title" content="F1 Haptic Trailer - Android Recreation | BeyondMeBtw">
+  <meta property="twitter:description"
+    content="Experience Formula 1 like never before with synchronized haptic feedback on Android devices.">
+  <meta property="twitter:image" content="https://content.beyondmebtw.com/experience/exp29.webp">
+
+  <!-- Schema.org structured data -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "F1 Haptic Trailer Android Recreation",
+  "description": "Interactive Formula 1 haptic feedback experience for Android devices with synchronized vibrations",
+  "applicationCategory": "Entertainment",
+  "operatingSystem": "Android",
+  "author": {
+    "@type": "Person",
+    "name": "Pranav Veeraghanta",
+    "url": "https://beyondmebtw.com/about"
+  }
+</script>
 </head>
 
 <body>
