--- a/manage/manage.html
+++ b/manage/manage.html
@@ -151,7 +151,7 @@
                     </div>
 
                     <div class="subcategory-section">
-                        <div class="subcategory-title">TV</div>
+                        <div class="subcategory-title">TV Shows</div>
                         <div id="tv-latest" class="no-posts">Loading...</div>
                     </div>
                 </div>
