--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <button id="logout-btn" class="logout-btn" onclick="window.location.href='https://manage.beyondmebtw.com/index.html'">Logout</button>
+
     <div class="container">
         <header>
             <h1>Minis Creator</h1>
