--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button id="logout-btn" class="logout-btn" onclick="window.location.href='https://manage.beyondmebtw.com/index.html'">Logout</button>
+    <button id="logout-btn" class="logout-btn">Logout</button>
 
     <div class="container">
         <header>
@@ -80,7 +80,8 @@ Supports Markdown:
                 </div>
             </div>
         </main>
-    </div>    
+    </div>
+    <script src="https://manage.beyondmebtw.com/authentication.js"></script>
     <script src="minis.js"></script>
 </body>
 
