--- a/manage/manage.html
+++ b/manage/manage.html
@@ -7,10 +7,11 @@
     <title>Manage Posts</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
-    <script src="authentication.js"></script>
+    <!-- <script src="authentication.js"></script> -->
 </head>
 
 <body>
+    <button id="logout-btn" class="logout-btn">Logout</button>
     <!-- Content Forms (no login form needed) -->
     <div id="content-container" class="content-container">
         <div class="main-section-container">
