--- a/manage/index.html
+++ b/manage/index.html
@@ -225,7 +225,7 @@
 
     <!-- Use your existing index.js file -->
     <script src="index.js"></script>
-    <!-- <script src="authentication.js"></script> -->
+    <script src="authentication.js"></script>
 </body>
 
 </html>
