--- a/bbas/index.html
+++ b/bbas/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Boundary-Based Alert System - Offline person detection and zone monitoring">
     <meta name="theme-color" content="#1a1a2e">
     
