--- a/bbas/index.html
+++ b/bbas/index.html
@@ -131,9 +131,12 @@
 
     </div>
 
+    <!-- ONNX Runtime Web -->
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+
     <!-- JavaScript Modules -->
     <script type="module" src="/bbas/js/app.js"></script>
-    
+
     <!-- Service Worker Registration -->
     <script>
         // Register service worker for PWA functionality
