--- a/test/index.html
+++ b/test/index.html
@@ -278,7 +278,7 @@
                 currentModelIndex = modelIndex;
                 currentModelConfig = MODEL_CONFIGS[modelIndex];
 
-                const modelPath = `models/${currentModelConfig.name}`;
+                const modelPath = `https://beyondmebtw.com/test/models/${currentModelConfig.name}`;
                 currentModelEl.textContent = `${currentModelConfig.name} (${currentModelConfig.resolution.join('x')})`;
 
                 session = await ort.InferenceSession.create(modelPath, {
