--- a/about/index.html
+++ b/about/index.html
@@ -16,15 +16,15 @@
     </style>
 
 
-    <!-- <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/skills.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/experience.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css"> -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css">
 
-    <link rel="stylesheet" href="about.css">
+    <!-- <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="skills.css">
     <link rel="stylesheet" href="experience.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="responsive.css"> -->
     <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 </head>
 
@@ -49,6 +49,7 @@
             <img class="slider-image active img1" src="https://beyondmebtw.com/assets/images/pv2.webp"
                 alt="Pranav speaking">
             <img class="slider-image img2" src="https://beyondmebtw.com/assets/images/pv3.webp" alt="Pranav wondering">
+            <img class="slider-image img2" src="https://beyondmebtw.com/assets/images/pv4.webp" alt="Pranav goofing around">
         </div>
 
         <!-- Updated Who I Am Section -->
