--- a/projects/uceedanswer/index.html
+++ b/projects/uceedanswer/index.html
@@ -95,8 +95,8 @@
         <div class="footer">
             <p><strong>Thanks to <a href="https://aaruxhhh.github.io/UCEED-2026-Score-Calculator/" target="_blank">aaruxhhh</a> for the inspiration! Check out their projects: <a href="https://aaruxhhh.github.io/UCEED-2026-Score-Calculator/" target="_blank">UCEED-2026-Score-Calculator</a></strong></p>
             <div class="credits">
-                <p>&copy; beyondmebtw 2022-present</p>
-                <p>beyondmebtw created by <a href="https://beyondmebtw.com" target="_blank">Pranav Veeraghanta</a></p>
+                <p>&copy; Beyondmebtw 2022-present</p>
+                <p>Beyondmebtw created by <a href="https://beyondmebtw.com" target="_blank">Pranav Veeraghanta</a></p>
             </div>
         </div>
     </div>
