--- a/projects/uceedanswer/index.html
+++ b/projects/uceedanswer/index.html
@@ -10,7 +10,7 @@
     <button class="sidebar-toggle" id="sidebarToggle">☰</button>
     
     <div class="sidebar" id="sidebar">
-        <h3>Navigation</h3>
+        <h3>Navigation <h4>V1.1</h4></h3>
         <ul class="sidebar-nav">
             <li><a href="#upload-section">Upload PDF</a></li>
             <li><a href="#score-summary">Score Summary</a></li>
