--- a/projects/uceedanswer/index.html
+++ b/projects/uceedanswer/index.html
@@ -27,7 +27,7 @@
             <h1>🎓 UCEED 2026 Score Calculator</h1>
             <p>Calculate your UCEED 2026 score by comparing your responses with the answer key</p>
             <div class="disclaimer">
-                <strong>⚠️ Note:</strong> This tool is unofficial and not affiliated with IIT Bombay or UCEED. This calculator is not 100% accurate and is for estimation purposes only. Use at your own discretion.
+                <strong>⚠️ Note:</strong> This tool is unofficial and not affiliated with UCEED. This calculator is not 100% accurate and is for estimation purposes only. Use at your own discretion.
             </div>
         </div>
 
