--- a/about/index.html
+++ b/about/index.html
@@ -15,16 +15,18 @@
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
+    <!-- Shared CSS Files -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
 
+    <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/skills.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/experience.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css">
 
-    <!-- <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="skills.css">
-    <link rel="stylesheet" href="experience.css">
-    <link rel="stylesheet" href="responsive.css"> -->
+    <!-- Responsive and Special CSS -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 </head>
 
