--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
+    <!-- Shared CSS Files -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
+
+    <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
@@ -22,7 +28,9 @@
     <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
+
+    <!-- Responsive and Special CSS -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 
 
