--- a/projects/index.html
+++ b/projects/index.html
@@ -15,9 +15,17 @@
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300..700&family=Permanent+Marker&display=swap');
     </style>
 
+    <!-- Shared CSS Files -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
+
+    <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="projgrid.css">
-    <link rel="stylesheet" href="responsive.css">
+
+    <!-- Responsive and Special CSS -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 
     <!-- Vue.js -->
