--- a/about/index.html
+++ b/about/index.html
@@ -16,18 +16,18 @@
     </style>
 
     <!-- Shared CSS Files -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/buttons.css">
 
     <!-- Page-Specific CSS Files -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/skills.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/experience.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="experience.css">
 
     <!-- Responsive and Special CSS -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
+    <link rel="stylesheet" href="../css/responsive-unified.css">
+    <link rel="stylesheet" href="../css/specials.css">
 </head>
 
 <body>
