--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     </style>
 
     <!-- Shared CSS Files -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/buttons.css">
 
     <!-- Page-Specific CSS Files -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/latest-post.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/profile-card.css">
+    <link rel="stylesheet" href="css/welcome-card.css">
+    <link rel="stylesheet" href="css/latest-post.css">
+    <link rel="stylesheet" href="css/get-in-touch.css">
+    <link rel="stylesheet" href="css/featured-posts.css">
+    <link rel="stylesheet" href="css/projects-showcase.css">
 
     <!-- Responsive and Special CSS -->
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
+    <link rel="stylesheet" href="css/responsive-unified.css">
+    <link rel="stylesheet" href="css/specials.css">
 
 
 
