--- a/projects/beyondpages/index.html
+++ b/projects/beyondpages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kindle PDF Reader</title>
+    <title>BeyondPages | BeyondMeBtw /title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/reader.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Upload Section -->
     <div id="upload-section" class="upload-container">
         <div class="upload-box">
-            <h1>📚 Kindle PDF Reader</h1>
+            <h1>📚 BeyondPages</h1>
             <p>Upload a PDF to start reading</p>
             <input type="file" id="pdf-upload" accept=".pdf" />
             <label for="pdf-upload" class="upload-button">Choose PDF File</label>
