--- a/manage/index.html
+++ b/manage/index.html
@@ -13,8 +13,10 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Arial', sans-serif;           
+            background-color: #3d3de2;
+            opacity: 0.8;
+            background-image: repeating-radial-gradient(circle at 0 0, transparent 0, #e5e5f7 10px), repeating-linear-gradient(#444cf755, #444cf7);
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -218,7 +220,7 @@
             <h1 class="welcome-text">Welcome <span class="name">Pranav</span></h1>
 
             <a href="manage.html" class="nav-btn posts-btn">Posts</a>
-            <a href="https://minis.beyondmebtw.com/backend/minis.html" class="nav-btn minis-btn">Minis</a>
+            <a href="https://minis.beyondmebtw.com/editor" class="nav-btn minis-btn">Minis</a>
             <a href="https://content.beyondmebtw.com" class="nav-btn content-btn" target="_blank">Content</a>
         </div>
     </div>
