--- a/manage/index.html
+++ b/manage/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beyond Me Btw - Dashboard</title>
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
+    <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
+    <title>Beyond Me Btw - Manage</title>
     <style>
         * {
             margin: 0;
