--- a/manage/index.html
+++ b/manage/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
-    <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://content.beyondmebtw.com/assets/bmb_logos/favicon.ico">
+    <meta property="og:image" content="https://content.beyondmebtw.com/assets/bmb_logos/favicon.ico">
     <title>Beyond Me Btw - Manage</title>
     <style>
         * {
