--- a/manage/manage.html
+++ b/manage/manage.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Posts</title>
+    <link rel="icon" type="image/x-icon" href="https://content.beyondmebtw.com/assets/bmb_logos/favicon.ico">
+    <meta property="og:image" content="https://content.beyondmebtw.com/assets/bmb_logos/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
     <script src="authentication.js"></script>
