--- a/index.html
+++ b/index.html
@@ -32,17 +32,6 @@
     <!-- Responsive and Special CSS -->
     <link rel="stylesheet" href="css/responsive-unified.css">
     <link rel="stylesheet" href="css/specials.css">
-
-
-
-    <!-- <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/profile-card.css">
-    <link rel="stylesheet" href="css/welcome-card.css">
-    <link rel="stylesheet" href="css/latest-post.css">
-    <link rel="stylesheet" href="css/get-in-touch.css">
-    <link rel="stylesheet" href="css/featured-posts.css">
-    <link rel="stylesheet" href="css/projects-showcase.css">
-    <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body>
@@ -178,7 +167,7 @@
                         </div>
                         <div class="social-info">
                             <div class="social-name">Email</div>
-                            <div class="social-username" id="email-address">Beyondmebtw@gmail.com</div>
+                            <div class="social-username" id="email-address">Pranav@BeyondMeBtw.com</div>
                         </div>
                     </div>
                 </a>
